--- a/app/src/main/res/layout/word_item.xml
+++ b/app/src/main/res/layout/word_item.xml
@@ -2,10 +2,9 @@
 <androidx.constraintlayout.widget.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="40dp"
-    android:padding="@dimen/textview_padding_small">
+    android:padding="@dimen/text_view_padding_small">
 
     <TextView
         android:id="@+id/tv_word"
@@ -14,7 +13,7 @@
         android:text=""
         android:maxEms="50"
         android:maxLength="50"
-        android:layout_marginStart="@dimen/textview_margin"
+        android:layout_marginStart="@dimen/text_view_margin"
         android:maxLines="1"
         android:textColor="@color/gray_text"
         app:layout_constraintStart_toStartOf="parent"
@@ -26,7 +25,7 @@
         android:layout_height="wrap_content"
         android:textColor="@color/gray_text"
         android:text=""
-        android:layout_marginEnd="@dimen/textview_margin"
+        android:layout_marginEnd="@dimen/text_view_margin"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
