get word smaller in width

--- a/app/src/main/res/layout/word_item.xml
+++ b/app/src/main/res/layout/word_item.xml
@@ -10,9 +10,9 @@
         android:id="@+id/tv_word"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text=""
-        android:maxEms="50"
-        android:maxLength="50"
+        android:text="fffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffff"
+        android:maxEms="30"
+        android:maxLength="30"
         android:layout_marginStart="@dimen/text_view_margin"
         android:maxLines="1"
         android:textColor="@color/gray_text"
